[package]
name = "maelrs"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.25"
serde = { version = "1.0.217", features = ["serde_derive", "rc"] }
serde_json = "1.0.138"
env_logger = "0.11.6"
tokio = { version = "1.43.0", features = ["full"] }
rand = "0.9.0"
futures = "0.3.31"

[[bin]]
name = "echo"

[[bin]]
name = "guid"

[features]
efficient = []
